[project]
name = "baseball-arbiter"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bs4>=0.0.2",
    "langchain-anthropic>=1.4.6",
    "langchain-community>=0.4.2",
    "langchain-openai>=1.3.2",
    "pinecone>=9.1.0",
    "pinecone-text>=0.11.0",
    "requests>=2.34.2",
]
[tool.ruff.lint]
select = ["I"]
